<?xml version="1.0"?>
<package>
  <name>fastsim_to_turtlebot</name>
  <version>1.0.0</version>
  <description>Package to bridge fastsim and a turtlebot.</description>

  <maintainer email="stephane.doncieux@upmc.fr">Stephane Doncieux</maintainer>
  <license>CeCILL</license>

  <author email="stephane.doncieux@upmc.fr">Stephane Doncieux</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>